# speex-sys

./: .gitmodules  Cargo.toml  build.rs  wrapper.h
src/: lib.rs
