[package]
name = "speex-sys"
authors = [
    "Rob Bailey <actioninja@criticalaction.net>",
    "Xiph.org Foundation",
]
version = "1.2.1"
edition = "2021"
license = "MPL-2.0 WITH BSD-3-Clause"
description = "Unsafe rust bindings to the speex audio compression library"
repository = "https://github.com/actioninja/speex-sys"
categories = ["external-ffi-bindings", "multimedia::audio", "encoding"]
keywords = ["speex", "libspeex", "vorbis", "compression"]

[build-dependencies]
bindgen = "0.65"
cc = "1.0"